--- a/style.css
+++ b/style.css
@@ -9,35 +9,38 @@
         height: 100%;
         /* solo per debug */
         background-color: black;
-        border: 2px dashed white;
+       
     }
 
     .header{
         max-width: 100%;
         height: 60px;
         position: relative;
-        /* solo per debug */
-        border: 2px dashed white;
-        background-color: grey;
+        background: black;
+        
+        
         
         
         
     }
-    .img-header{
-        position: relative;
-        top: 0;
-        right: 0;
-        display: inline-block;
+    .box-img-header{
+        background: grey;
         /* solo per debug */
-        border: 2px dashed greenyellow; 
+       
+        
+    }
+
+    .img-header{
+        width: 100%;
+        height: 10px;
+        fill: white;
         
     }
 
     .row{
         display: flex;
         width: 100vh;
-        justify-items: center;
-        padding-left: 5rem;
+        padding-left: 5.5rem;
         
         
         
@@ -49,23 +52,47 @@
         width: 100vw;
     }
 
+    .img-col{
+        position: relative;
+    }
+    .microfono{
+        position: relative;
+        bottom: 0;
+        right: 0;
+
+        width: 20px;
+        height: 20px;
+    }
     .col-small1{
-        background-color: red;
+        border: 1px dashed red;
         width:200px;
-        height: 30px;
+        
         
 
     }
 
     .col-large{
-        background-color: aqua;
+        border: 1px dashed red;
         flex-grow: 2;
-        flex:;
         
         
     }
 
     .col-small2{
-        background-color: red;
-        width:200px;
-        height: 30px;
+        border: 1px dashed red;
+        width:100px;
+        text-align: center;
+        
+    }
+    .txt-col-sm2{
+        padding: 2rem 0rem;
+        background: grey;
+        color: red;
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .row-footer{
+        display: flex;
+        background-color: grey;
+        min-height: 20px;
+    }
