--- a/style.css
+++ b/style.css
@@ -7,59 +7,69 @@
     .container-main{
         width: 100vw;
         height: 100%;
-        /* solo per debug */
-        background-color: black;
-       
+        background-color: black; 
     }
 
     .header{
         max-width: 100%;
-        height: 60px;
+        height: 10px;
         position: relative;
-        background: black;
-        
-        
-        
+        background: black; 
         
         
     }
-    .box-img-header{
-        background: grey;
-        /* solo per debug */
-       
+    .box-button{
+        position: relative;
         
+    }
+    .btn{
+        background: grey;
+        color: white;
+        font-size: 10px;
+        border-radius: 10px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 30px;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        margin-right: 50px;
+        margin-top: 10px;
+        
+
     }
 
-    .img-header{
+    .img-button{
         width: 100%;
+        margin: auto;
         height: 10px;
-        fill: white;
+        filter: invert(100%);
+        position: absolute;
+        left: 0;
+        top: 0;
+    
         
     }
 
     .row{
         display: flex;
         width: 100vh;
-        padding-left: 5.5rem;
-        
-        
+        padding: 2rem;
+        margin-top: 10px;
         
     }
     .col{ 
-        justify-items: center;
-        /* solo per debug */
-        width: 100vw;
+        padding-left: 2rem;
         padding: 0.5rem;
     }
 
     .img-col{
-        position: relative;
+    
     }
     .microfono{
         position: relative;
         bottom: 0;
         right: 0;
-
         width: 20px;
         height: 20px;
     }
